website/versioned_docs/version-2.2.0/api/plugins/plugin-google-analytics.mdx
---
sidebar_position: 6
slug: /api/plugins/@ianaio/plugin-google-analytics
---

# 📦 plugin-google-analytics

import APITable from '@site/src/components/APITable';

The default [Google Analytics](https://developers.google.com/analytics/devguides/collection/analyticsjs/) plugin. It is a JavaScript library for measuring how users interact with your website **in the production build**. If you are using Google Analytics 4 you might need to consider using [plugin-google-gtag](./plugin-google-gtag.mdx) instead.

:::caution production only

This plugin is always inactive in development and **only active in production** to avoid polluting the analytics statistics.

:::

## Installation {#installation}

```bash npm2yarn
npm install --save @ianaio/plugin-google-analytics
```

:::tip

If you use the preset `@ianaio/preset-classic`, you don't need to install this plugin as a dependency.

You can configure this plugin through the preset options.

:::

## Configuration {#configuration}

Accepted fields:

```mdx-code-block
<APITable>
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `trackingID` | `string` | **Required** | The tracking ID of your analytics service. |
| `anonymizeIP` | `boolean` | `false` | Whether the IP should be anonymized when sending requests. |

```mdx-code-block
</APITable>
```

### Example configuration {#ex-config}

You can configure this plugin through preset options or plugin options.

:::tip

Most Ianaio users configure this plugin through the preset options.

:::

```js config-tabs
// Preset Options: googleAnalytics
// Plugin Options: @ianaio/plugin-google-analytics

const config = {
  trackingID: 'UA-141789564-1',
  anonymizeIP: true,
};
```
